# D7018E-Embedded-decryption

./: Cargo.toml  README.md
src/: main.rs  notes
